--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.4.0",
     "react-native-phone-input": "^1.3.7",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
