--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-image-picker": "^8.2.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
+    "react-native-pdf": "^6.7.7",
     "react-native-permissions": "^5.4.0",
     "react-native-phone-input": "^1.3.7",
     "react-native-picker-select": "^9.3.1",
