--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,10 +3,10 @@ buildscript {
         buildToolsVersion = "35.0.0"
         minSdkVersion = 24
         compileSdkVersion = 35
-        targetSdkVersion = 34
+        targetSdkVersion = 35
         ndkVersion = "27.1.12297006"
         kotlinVersion = "2.0.21"
-         googlePlayServicesAuthVersion = "20.7.0" // <--- use this version or newer
+         googlePlayServicesAuthVersion = "20.7.0"
     }
     repositories {
         google()
