--- a/ios/corallatest.xcodeproj/xcshareddata/xcschemes/corallatest.xcscheme
+++ b/ios/corallatest.xcodeproj/xcshareddata/xcschemes/corallatest.xcscheme
@@ -32,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "corallatestTests.xctest"
-               BlueprintName = "corallatestTests"
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "corallatest.app"
+               BlueprintName = "corallatest"
                ReferencedContainer = "container:corallatest.xcodeproj">
             </BuildableReference>
          </TestableReference>
