--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-firebase/app": "^21.13.0",
-    "@react-native-firebase/messaging": "^21.13.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/messaging": "^21.14.0",
     "@react-native/gradle-plugin": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/drawer": "^7.3.8",
@@ -57,13 +57,14 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-version-check": "^3.5.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli": "^15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.77.0",
